# aoc-2022

./: .gitignore  CMakeLists.txt  README.md
src/day01/: day01.cxx
src/day02/: day02.cxx
src/day03/: day03.cxx
src/day04/: day04.cxx
src/day05/: day05.cxx
src/day06/: day06.cxx
src/day07/: day07.cxx
src/util/: func.hxx  interface.hxx  stubby.hxx
